Fix retrieve of status code in case of error